# GreenSkills

./: .env.example  .gitignore  README.md  Untitled.ipynb  alembic.ini  docker-compose.yml  evstigney.session.sql  pyproject.toml
app/: config.py
app/adapters/db/: base_model.py  base_repository.py  session.py
app/entities/: presentation.py  slide.py  slide_template.py  user.py
app/prompts/: generate_content_slides.py  generate_slides.py  llm.py
app/services/: embedding_service.py  llm_service.py  pdf_chunk_service.py
app/tasks/: __init__.py  base_task.py  generate_slide_prompts.py  notifications.py  rag_tasks.py
app/use_cases/auth/: login.py
app/use_cases/presentation/: delete.py  generate_fake.py  publish.py  read.py  read_by_code.py  read_list.py  reorder.py  update.py
app/use_cases/rag/: embed_chunks.py  pdf_summarize.py
app/use_cases/slide/: create.py  delete.py  read.py  update.py
app/use_cases/slide_template/: create.py  delete.py  (+3 more)
app/utils/: hash_password.py
app/web_api/: server.py
docker/api/: Dockerfile
docker/frontend/: Dockerfile
docs/: index.md
frontend/: .editorconfig  README.md  package-lock.json  package.json  prettier.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
green/: pyvenv.cfg
migrations/: env.py
migrations/versions/: 20250111_1834_base.py  20250111_1851_user.py  20250126_0952_presentation.py  20250126_1009_slide_templates.py  20250126_1012_slides.py  20250202_1448_add_prompts.py  20250202_1458_version_tables.py
ml/: main.py  prompts.py
scripts/: collect_files.py  seed_templates.py  test.py
(+102 files in other folders)
