[tool.poetry]
name = "Evstigney"
version = "0.1.0"
description = "Евстигней - ваш личный помощник в разработке презентаций"
package-mode = false
authors = ["AE"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.8.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
PyJWT = "^2.4.0"
fastapi = "^0.105.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.4.0"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"
asyncpg = "^0.27.0"
contextvars = "^2.4"
pydantic = "^2.5.2"
bump-pydantic = "^0.7.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
passlib = "^1.7.4"
types-sqlalchemy = "^1.4.53.38"
typing-extensions = "^4.12.2"
chardet = "^5.2.0"
dependency-injector = "^4.45.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
langchain = "^0.3.18"
openai = "^1.63.0"


[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
sqlacodegen = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
